# panelito

./: Cargo.toml  README.md  flake.nix  rpi3.nix
.github/workflows/: build.yml
src/: main.rs
