[package]
name = "mqtt-light"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
framebuffer = "0.3"
rumqttc = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bpaf = "0.9"
ddc-hi = "0.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
